# Stock-Agent

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: AnalysisReport.tsx  ChatMessage.tsx  LoadingState.tsx
src/: agent.py  main.py  pipeline.py  verify_setup.py
src/api/: index.py
src/app/: persistence.py
src/config/: prompts.py  settings.py
src/graph/: nodes.py  state.py  workflow.py
src/memory/: short_term.py  store.py
src/rag/: core.py
src/rag/utils/: chunk.py  embed.py
src/tools/: micro.py  news.py  registry.py
src/tools/model/: data.py  feature.py  infer.py  neural.py  train.py
src/tools/sentiment/: train.py
src/utils/: device.py  errors.py  json_parser.py  logger.py  retry.py
test/: analyze_confidence_curve.py  analyze_learning.py  canary_test.py  forecast_future.py  micro_cli.py  micro_notebook_test.ipynb  train_hourly.py
